Secondcommit Added h2 tag

--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
         <input type="text" name="Fullname" placeholder="Enter FullName">
         <input type="password" placeholder="Enter password">
         <div>
+        Select your Favourite colour:
         <input type="radio" name="colour" value="Red">Red
         <input type="radio" name="colour" value="Green">Green
         <input type="radio" name="colour" value="Yellow">Yellow
