Sixth commit. Added h6 from Github repository

--- a/demo.html
+++ b/demo.html
@@ -13,6 +13,7 @@
     <h3>INDIA VS ENGLAND ON 29TH</h3>
     <h4>Added h4</h4>
     <h5>Added h5</h5>
+    <h6>Added h6 in github repository</h6>
     <form>
         <input type="text" name="Fullname" placeholder="Enter FullName">
         <input type="password" placeholder="Enter password">
