--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my WebPage</h1>
+    <h1 style="colour:blue">Welcome to my WebPage</h1>
     <h2>Please Fill your details</h2>
     <h3>INDIA VS ENGLAND ON 29TH</h3>
     <h4>Added h4</h4>
