--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
     <h4>Added h4</h4>
     <h5>Added h5</h5>
     <h6>Added h6 in github repository</h6>
+    <h6>Add new h6 to test reset</h6>
     <form>
         <input type="text" name="Fullname" placeholder="Enter FullName">
         <input type="password" placeholder="Enter password">
